<resources>
    <string name="app_name">AutoParts</string>
    <string name="mail_servicios_autoparts_com">mail: servicios@Autoparts.com</string>
    <string name="iniciar">Iniciar</string>
    <string name="telefono_57_33322211">Telefono: +57 33322211</string>
    <string name="direcccion_calle_63_24_15">Direcccion: Calle 63 24 15</string>
    <string name="introduccion">Puede encontrar todas las autopartes y servicios que necesite su vehiculo sin importar la marca y la ciudad </string>
    <string name="direccion_calle_63_24_12">Direccion: calle 63 # 24 12</string>
    <string name="telefono_6011234567">Telefono:6011234567</string>
    <string name="mail_tienda_bogota_autopartes_com_co">Mail:tienda.bogota@autopartes.com.co</string>
    <string name="direccion_calle_9_8_7">Direccion: calle 9 # 8 7</string>
    <string name="telefono_6041234567">telefono: 6041234567</string>
    <string name="tienda_medellin_autopartes_com_co">tienda.medellin@autopartes.com.co</string>
    <string name="bogota">Bogota</string>
    <string name="medellin">Medellin</string>
    <string name="latoneria">Latoneria</string>
    <string name="lavado">lavado</string>
    <string name="mantenimiento">Mantenimiento</string>
    <string name="sucursales">Sucursales</string>
    <string name="productos">Productos</string>
    <string name="servicios">Servicios</string>
</resources>